# islamic-finance-agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  categorizer.py  insight_generator.py  orchestrator.py  recurrence_detector.py  shariah_screener.py  zakat_calculator.py
app/api/: health.py  insights.py  profile.py  router.py  transactions.py  websocket.py  zakat.py
app/core/: __init__.py  circuit_breaker.py  database.py  exceptions.py  logging.py
app/data/: category_taxonomy.json  mcc_codes.json  merchant_rules.json  shariah_blocklist.json
app/data/prompts/: categorization.txt  insight_generation.txt  shariah_screening.txt
app/models/: __init__.py  database.py  schemas.py  state.py
app/services/: __init__.py  cache.py  gold_price.py  llm_client.py  sanitizer.py
frontend/: index.html
frontend/src/: index.css  main.js
frontend/src/utils/: api.js  websocket.js
migrations/: README  env.py
migrations/versions/: 001_raw_transactions.py  002_mapped_transactions.py  003_enriched_transactions.py  004_financial_insights.py  005_financial_profile.py
scripts/: demo.py  run_pipeline.py  seed_transactions.py  test_live_services.py
tests/: test_agents.py  test_api.py  test_cache.py  test_circuit_breaker.py  test_config.py  test_data_assets.py  test_exceptions.py  test_gold_price.py  test_llm_client.py  test_logging.py  test_models.py  test_sanitizer.py
